webapp/src/shared/components/templates/MainTabPageTemplate/MainTabPageTemplate.css
.main-tab-template {
  position: relative;
  margin: 0;
  height: 100vh;
  padding: var(--padding-top-bottom) var(--padding-sides);
  background-color: var(--color-background);
  color: var(--color-light);
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto auto 1fr auto auto;
  gap: var(--row-gap) var(--column-gap);
}

.main-tab-template-loading {
  grid-column: 1/-1;
  grid-row: 1/-1;
  align-self: center;
  justify-self: center;
}

.main-tab-template-avatar {
  justify-self: flex-start;
  grid-row: 1/2;
}

.main-tab-template-avatar .avatar-small__image-wrapper {
  margin: 0;
}

.main-tab-template .rows-list-template-search {
  grid-row: 2/3;
}

.main-tab-template .rows-list-template-rows {
  grid-row: 3/4;
  padding-bottom: var(--padding-top-bottom);
}

@media all and (max-width: 768px) {
  .main-tab-template-navigation {
    position: fixed;
    padding: var(--padding-top-bottom) var(--padding-sides);
    bottom: 0;
    left: 0;
    width: 100%;
    background-color: var(--color-background);
  }
}

@media all and (min-width: 768px) {
  .main-tab-template {
    height: 100vh;
    column-gap: var(--column-gap);
    row-gap: var(--row-gap);
    display: grid;
    grid-template-columns: repeat(var(--column-number), 1fr);
    grid-template-rows: auto 1fr;
  }

  .main-tab-template-avatar {
    align-self: center;
    grid-column: 1/2;
    grid-row: 1/2;
    z-index: 1;
  }

  .main-tab-template .rows-list-template-search {
    align-self: center;
    margin: 0;
    grid-column: 2/6;
    grid-row: 1/2;
  }

  .main-tab-template .rows-list-template-search .input-container {
    margin: 0;
  }

  .main-tab-template-navigation {
    margin-top: 0;
    align-self: center;
    grid-column: 8 / var(--column-end);
    grid-row: 1/2;
    z-index: 0;
    /* position: relative; */
  }

  .main-tab-template .rows-list-template-rows {
    grid-column: 1 / var(--column-end);
    grid-row: 2/3;
    overflow-y: auto;
  }
}

@media all and (min-width: 1200px) {
  .main-tab-template-navigation {
    grid-column: 9 / var(--column-end);
  }
}

@media all and (max-width: 1200px) {
  .main-tab-template-avatar {
    display: flex;
  }
}

